Removing Data Length from the request. Adding resetStats()

--- a/www/index.html
+++ b/www/index.html
@@ -28,15 +28,9 @@
               </div>
             </div>
             <div class="form-group">
-              <label for="req" class="col-sm-3 control-label">Req/s</label>
+              <label for="req" class="col-sm-3 control-label">Req/s (per node)</label>
               <div class="col-sm-3">
                 <input type="text" class="form-control" id="req" placeholder="100" required value="100">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="len" class="col-sm-3 control-label">Data Length</label>
-              <div class="col-sm-3">
-                <input type="text" class="form-control" id="len" placeholder="100" required value="100">
               </div>
             </div>
            
